// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseList with empty message 1`] = `
<div>
  <NavLink
    activeClassName="active"
    ariaCurrent="true"
    to="/edit/undefined"
  >
    <h3 />
  </NavLink>
  <p />
  <p>
    -
  </p>
</div>
`;

exports[`should render ExpenseList with expenses 1`] = `
<div>
  <NavLink
    activeClassName="active"
    ariaCurrent="true"
    to="/edit/1"
  >
    <h3>
      Gum
    </h3>
  </NavLink>
  <p>
    1
  </p>
  <p>
    195
    -
    0
  </p>
</div>
`;
